--- a/paper/references.bib
+++ b/paper/references.bib
@@ -314,3 +314,215 @@
       archivePrefix={arXiv},
       primaryClass={cs.CL}
 }
+
+@misc{grill2020bootstrap,
+      title={Bootstrap your own latent: A new approach to self-supervised Learning}, 
+      author={Jean-Bastien Grill and Florian Strub and Florent Altché and Corentin Tallec and Pierre H. Richemond and Elena Buchatskaya and Carl Doersch and Bernardo Avila Pires and Zhaohan Daniel Guo and Mohammad Gheshlaghi Azar and Bilal Piot and Koray Kavukcuoglu and Rémi Munos and Michal Valko},
+      year={2020},
+      eprint={2006.07733},
+      archivePrefix={arXiv},
+      primaryClass={cs.LG}
+}
+
+@misc{xiao2022retromae,
+      title={RetroMAE: Pre-Training Retrieval-oriented Language Models Via Masked Auto-Encoder}, 
+      author={Shitao Xiao and Zheng Liu and Yingxia Shao and Zhao Cao},
+      year={2022},
+      eprint={2205.12035},
+      archivePrefix={arXiv},
+      primaryClass={cs.CL}
+}
+
+@misc{muennighoff2023mteb,
+      title={MTEB: Massive Text Embedding Benchmark}, 
+      author={Niklas Muennighoff and Nouamane Tazi and Loïc Magne and Nils Reimers},
+      year={2023},
+      eprint={2210.07316},
+      archivePrefix={arXiv},
+      primaryClass={cs.CL}
+}
+
+@misc{lee2019latent,
+      title={Latent Retrieval for Weakly Supervised Open Domain Question Answering}, 
+      author={Kenton Lee and Ming-Wei Chang and Kristina Toutanova},
+      year={2019},
+      eprint={1906.00300},
+      archivePrefix={arXiv},
+      primaryClass={cs.CL}
+}
+
+@misc{liu2022dial2vec,
+      title={Dial2vec: Self-Guided Contrastive Learning of Unsupervised Dialogue Embeddings}, 
+      author={Che Liu and Rui Wang and Junfeng Jiang and Yongbin Li and Fei Huang},
+      year={2022},
+      eprint={2210.15332},
+      archivePrefix={arXiv},
+      primaryClass={cs.CL}
+}
+
+@misc{zang2020multiwoz,
+      title={MultiWOZ 2.2 : A Dialogue Dataset with Additional Annotation Corrections and State Tracking Baselines}, 
+      author={Xiaoxue Zang and Abhinav Rastogi and Srinivas Sunkara and Raghav Gupta and Jianguo Zhang and Jindong Chen},
+      year={2020},
+      eprint={2007.12720},
+      archivePrefix={arXiv},
+      primaryClass={cs.CL}
+}
+
+@misc{wu2018unsupervised,
+      title={Unsupervised Feature Learning via Non-Parametric Instance-level Discrimination}, 
+      author={Zhirong Wu and Yuanjun Xiong and Stella Yu and Dahua Lin},
+      year={2018},
+      eprint={1805.01978},
+      archivePrefix={arXiv},
+      primaryClass={cs.CV}
+}
+
+@misc{oord2019representation,
+      title={Representation Learning with Contrastive Predictive Coding}, 
+      author={Aaron van den Oord and Yazhe Li and Oriol Vinyals},
+      year={2019},
+      eprint={1807.03748},
+      archivePrefix={arXiv},
+      primaryClass={cs.LG}
+}
+
+@misc{noroozi2017unsupervised,
+      title={Unsupervised Learning of Visual Representations by Solving Jigsaw Puzzles}, 
+      author={Mehdi Noroozi and Paolo Favaro},
+      year={2017},
+      eprint={1603.09246},
+      archivePrefix={arXiv},
+      primaryClass={cs.CV}
+}
+
+@misc{doersch2017multitask,
+      title={Multi-task Self-Supervised Visual Learning}, 
+      author={Carl Doersch and Andrew Zisserman},
+      year={2017},
+      eprint={1708.07860},
+      archivePrefix={arXiv},
+      primaryClass={cs.CV}
+}
+
+@inproceedings{gao-callan-2021-condenser,
+    title = "Condenser: a Pre-training Architecture for Dense Retrieval",
+    author = "Gao, Luyu  and
+      Callan, Jamie",
+    editor = "Moens, Marie-Francine  and
+      Huang, Xuanjing  and
+      Specia, Lucia  and
+      Yih, Scott Wen-tau",
+    booktitle = "Proceedings of the 2021 Conference on Empirical Methods in Natural Language Processing",
+    month = nov,
+    year = "2021",
+    address = "Online and Punta Cana, Dominican Republic",
+    publisher = "Association for Computational Linguistics",
+    url = "https://aclanthology.org/2021.emnlp-main.75",
+    doi = "10.18653/v1/2021.emnlp-main.75",
+    pages = "981--993",
+    abstract = "Pre-trained Transformer language models (LM) have become go-to text representation encoders. Prior research fine-tunes deep LMs to encode text sequences such as sentences and passages into single dense vector representations for efficient text comparison and retrieval. However, dense encoders require a lot of data and sophisticated techniques to effectively train and suffer in low data situations. This paper finds a key reason is that standard LMs{'} internal attention structure is not ready-to-use for dense encoders, which needs to aggregate text information into the dense representation. We propose to pre-train towards dense encoder with a novel Transformer architecture, Condenser, where LM prediction CONditions on DENSE Representation. Our experiments show Condenser improves over standard LM by large margins on various text retrieval and similarity tasks.",
+}
+
+@misc{xiong2020approximate,
+      title={Approximate Nearest Neighbor Negative Contrastive Learning for Dense Text Retrieval}, 
+      author={Lee Xiong and Chenyan Xiong and Ye Li and Kwok-Fung Tang and Jialin Liu and Paul Bennett and Junaid Ahmed and Arnold Overwijk},
+      year={2020},
+      eprint={2007.00808},
+      archivePrefix={arXiv},
+      primaryClass={cs.IR}
+}
+
+@misc{neelakantan2022text,
+      title={Text and Code Embeddings by Contrastive Pre-Training}, 
+      author={Arvind Neelakantan and Tao Xu and Raul Puri and Alec Radford and Jesse Michael Han and Jerry Tworek and Qiming Yuan and Nikolas Tezak and Jong Wook Kim and Chris Hallacy and Johannes Heidecke and Pranav Shyam and Boris Power and Tyna Eloundou Nekoul and Girish Sastry and Gretchen Krueger and David Schnurr and Felipe Petroski Such and Kenny Hsu and Madeleine Thompson and Tabarak Khan and Toki Sherbakov and Joanne Jang and Peter Welinder and Lilian Weng},
+      year={2022},
+      eprint={2201.10005},
+      archivePrefix={arXiv},
+      primaryClass={cs.CL}
+}
+
+@misc{feng2022languageagnostic,
+      title={Language-agnostic BERT Sentence Embedding}, 
+      author={Fangxiaoyu Feng and Yinfei Yang and Daniel Cer and Naveen Arivazhagan and Wei Wang},
+      year={2022},
+      eprint={2007.01852},
+      archivePrefix={arXiv},
+      primaryClass={cs.CL}
+}
+
+@misc{reimers2019sentencebert,
+      title={Sentence-BERT: Sentence Embeddings using Siamese BERT-Networks}, 
+      author={Nils Reimers and Iryna Gurevych},
+      year={2019},
+      eprint={1908.10084},
+      archivePrefix={arXiv},
+      primaryClass={cs.CL}
+}
+
+@misc{fang2020cert,
+      title={CERT: Contrastive Self-supervised Learning for Language Understanding}, 
+      author={Hongchao Fang and Sicheng Wang and Meng Zhou and Jiayuan Ding and Pengtao Xie},
+      year={2020},
+      eprint={2005.12766},
+      archivePrefix={arXiv},
+      primaryClass={cs.CL}
+}
+
+@inproceedings{yan-etal-2021-consert,
+    title = "{C}on{SERT}: A Contrastive Framework for Self-Supervised Sentence Representation Transfer",
+    author = "Yan, Yuanmeng  and
+      Li, Rumei  and
+      Wang, Sirui  and
+      Zhang, Fuzheng  and
+      Wu, Wei  and
+      Xu, Weiran",
+    editor = "Zong, Chengqing  and
+      Xia, Fei  and
+      Li, Wenjie  and
+      Navigli, Roberto",
+    booktitle = "Proceedings of the 59th Annual Meeting of the Association for Computational Linguistics and the 11th International Joint Conference on Natural Language Processing (Volume 1: Long Papers)",
+    month = aug,
+    year = "2021",
+    address = "Online",
+    publisher = "Association for Computational Linguistics",
+    url = "https://aclanthology.org/2021.acl-long.393",
+    doi = "10.18653/v1/2021.acl-long.393",
+    pages = "5065--5075",
+    abstract = "Learning high-quality sentence representations benefits a wide range of natural language processing tasks. Though BERT-based pre-trained language models achieve high performance on many downstream tasks, the native derived sentence representations are proved to be collapsed and thus produce a poor performance on the semantic textual similarity (STS) tasks. In this paper, we present ConSERT, a Contrastive Framework for Self-Supervised SEntence Representation Transfer, that adopts contrastive learning to fine-tune BERT in an unsupervised and effective way. By making use of unlabeled texts, ConSERT solves the collapse issue of BERT-derived sentence representations and make them more applicable for downstream tasks. Experiments on STS datasets demonstrate that ConSERT achieves an 8{\%} relative improvement over the previous state-of-the-art, even comparable to the supervised SBERT-NLI. And when further incorporating NLI supervision, we achieve new state-of-the-art performance on STS tasks. Moreover, ConSERT obtains comparable results with only 1000 samples available, showing its robustness in data scarcity scenarios.",
+}
+
+@misc{luo2021unsupervised,
+      title={Unsupervised Document Embedding via Contrastive Augmentation}, 
+      author={Dongsheng Luo and Wei Cheng and Jingchao Ni and Wenchao Yu and Xuchao Zhang and Bo Zong and Yanchi Liu and Zhengzhang Chen and Dongjin Song and Haifeng Chen and Xiang Zhang},
+      year={2021},
+      eprint={2103.14542},
+      archivePrefix={arXiv},
+      primaryClass={cs.CL}
+}
+
+@misc{liu2021dialoguecse,
+      title={DialogueCSE: Dialogue-based Contrastive Learning of Sentence Embeddings}, 
+      author={Che Liu and Rui Wang and Jinghua Liu and Jian Sun and Fei Huang and Luo Si},
+      year={2021},
+      eprint={2109.12599},
+      archivePrefix={arXiv},
+      primaryClass={cs.CL}
+}
+
+@InProceedings{dgac,
+author="Nagovitsin, Mark
+and Kuznetsov, Denis",
+editor="Kryzhanovsky, Boris
+and Dunin-Barkowski, Witali
+and Redko, Vladimir
+and Tiumentsev, Yury",
+title="DGAC: Dialogue Graph Auto Construction Based on Data with a Regular Structure",
+booktitle="Advances in Neural Computation, Machine Learning, and Cognitive Research VI",
+year="2023",
+publisher="Springer International Publishing",
+address="Cham",
+pages="508--529",
+abstract="A scripted graph is a way to represent a dialogue scenario in a dialogue system. It is often used in development when the dialogue has a regular structure. In this paper, we propose a method for recovering or extracting regular structures from the data by building a dialogue graph. The dialogue graphs constructed by our method can be used for a more accurate pre-selection of candidates for response selection models on the MultiWOZ dataset. Quality improvements are demonstrated for various response selection models: statistical, pre-trained, and fine-tuned. Obtained results demonstrate the applicability of our approach to the automatic construction of a dialogue graph for the tasks of creating scenario-driven dialogue assistants and improving response selection models.",
+isbn="978-3-031-19032-2"
+}
